codespeak-lib (1.2.1-3) UNRELEASED; urgency=low

  * Drop README.Debian; information too obsolete.

 -- Chris Lamb <lamby@debian.org>  Sat, 27 Feb 2010 18:02:44 +0000

codespeak-lib (1.2.1-2) unstable; urgency=low

  * Rebuild for Python 2.6 support (Closes: #569825)

 -- Chris Lamb <lamby@debian.org>  Thu, 18 Feb 2010 23:47:05 +0000

codespeak-lib (1.2.1-1) unstable; urgency=low

  * New upstream release.
    - Don't install the (eg.) py.which-2.{4,5} executables
  * Bump Standards-Version to 3.8.3.

 -- Chris Lamb <lamby@debian.org>  Thu, 11 Feb 2010 15:02:03 +0000

codespeak-lib (1.1.1-3) unstable; urgency=low

  * Update README.Debian to reflect new package names. Thanks to Adam
    Schmalhofer <Adam.Schmalhofer@gmx.de>. (Closes: #559042)
  * Also clean py.egg-info/SOURCES.txt to prevent .diff.gz changing on rebuild.
    Thanks to Adam Schmalhofer <Adam.Schmalhofer@gmx.de>.
  * Tidy Suggests: after upstream removed functionality.
  * Add python-execnet to Suggests.

 -- Chris Lamb <lamby@debian.org>  Sun, 13 Dec 2009 21:31:48 +0000

codespeak-lib (1.1.1-2) unstable; urgency=low

  * Drop reference to py.execnet - not in codespeak-lib package anymore.
    (Closes: #559042)

 -- Chris Lamb <lamby@debian.org>  Wed, 02 Dec 2009 00:20:57 +0000

codespeak-lib (1.1.1-1) unstable; urgency=low

  * New upstream release.
    - Embedded code copies removed upstream (Closes: #555420)
  * Update manpages:
    - Remove py.rest manpage.
    - Add py.convert_unittest manpage.

 -- Chris Lamb <lamby@debian.org>  Mon, 30 Nov 2009 23:56:02 +0000

codespeak-lib (1.0.2-2) unstable; urgency=low

  * Add missing dependency on python-pkg-resources (Closes: #550066)

 -- Chris Lamb <lamby@debian.org>  Thu, 08 Oct 2009 15:19:11 +0100

codespeak-lib (1.0.2-1) unstable; urgency=low

  * New upstream release.
  * Rebuild with newer debhelper. (Closes: #549374, #549675)
  * Clean extra LICENSE file to silence Lintian.

 -- Chris Lamb <lamby@debian.org>  Mon, 05 Oct 2009 17:35:57 +0100
