@@ -1,5 +1,6 @@
 codespeak-lib (1.2.1-3) UNRELEASED; urgency=low
 
+  * Rename binary package to python-py to fit Python Policy (Closes: #569711).
   * Drop README.Debian; information too obsolete.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 27 Feb 2010 18:02:44 +0000
